gccida/c1/check_insn_for_givs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5782:4: error: expected ';' after expression
rtx v26; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5782:5: error: use of undeclared identifier 'v26'
rtx v26; // [rsp+28h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5783:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+30h] [rbp-48h] 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5783:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+30h] [rbp-48h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5784:4: error: expected ';' after expression
rtx v28; // [rsp+38h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5784:5: error: use of undeclared identifier 'v28'
rtx v28; // [rsp+38h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5785:4: error: expected ';' after expression
rtx last_consec_insn; // [rsp+40h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5785:5: error: use of undeclared identifier 'last_consec_insn'; did you mean 'skip_consec_insns'?
rtx last_consec_insn; // [rsp+40h] [rbp-38h] BYREF 
    ^~~~~~~~~~~~~~~~
    skip_consec_insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:1339:1: note: 'skip_consec_insns' declared here
skip_consec_insns (insn, count)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5793:12: error: expected ';' after expression
v8 = ( rtx)p[2]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5795:31: error: expected expression
v8 = single_set_2( p, *( rtx *)&p[2]); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5798:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v8->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5808:44: error: expected expression
if ( !general_induction_var( loop, *( rtx *)&v8[1], &v26, &add_val, &v23, &ext_val, 0, &pbenefit, VOIDmode) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5808:54: error: use of undeclared identifier 'v26'
if ( !general_induction_var( loop, *( rtx *)&v8[1], &v26, &add_val, &v23, &ext_val, 0, &pbenefit, VOIDmode) ) 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5817:2: error: use of undeclared identifier 'v26'
&v26, 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5832:75: error: use of undeclared identifier 'v26'
if ( ( unsigned int)rtuint < ( unsigned int)max_reg_before_loop && rtx != v26 ) 
                                                                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5835:1: error: use of undeclared identifier 'v28'
v28 = v26; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5835:7: error: use of undeclared identifier 'v26'
v28 = v26; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5837:53: error: use of undeclared identifier 'v26'
|| ( pbenefit = consec_sets_giv( loop, pbenefit, p, v26, rtx, &add_val, &v23, &ext_val, &last_consec_insn)) != 0 ) 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:5837:90: error: use of undeclared identifier 'last_consec_insn'; did you mean 'skip_consec_insns'?
|| ( pbenefit = consec_sets_giv( loop, pbenefit, p, v26, rtx, &add_val, &v23, &ext_val, &last_consec_insn)) != 0 ) 
                                                                                         ^~~~~~~~~~~~~~~~
                                                                                         skip_consec_insns
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/loop.c:1339:1: note: 'skip_consec_insns' declared here
skip_consec_insns (insn, count)
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_insn_for_givs/src/obj/loop.o] Error 1
